tests/snapshots/tests__standard@excess-parentheses-comments.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local foo = bar -- test

-- https://github.com/JohnnyMorganz/StyLua/issues/530
call(
	-- comment
	foo
)

