tests/snapshots/tests__standard@excess-parentheses-dont-remove.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
-- https://github.com/JohnnyMorganz/StyLua/issues/609
-- Indicate precedence
local _ = (not true) == true
local _ = (not true) and false

-- https://github.com/JohnnyMorganz/StyLua/issues/623
-- Changes meaning
local y = (-X) ^ Y

-- The same holds when the expression is hung over multiple lines
local someVeryLongVariableNameHere = (-someExtremelyLongOperandNameOnTheLeft)
	^ someOtherExtremelyLongOperandNameOnTheRight
local anotherVeryLongVariableNameHere = (not someExtremelyLongConditionNameOnTheLeft)
	and someOtherExtremelyLongConditionNameOnTheRight

