tests/snapshots/tests__standard@function-call-3.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
setmetatable({
	_words = words,
	_morewords = words,
	_evenmorewords = words,
	_words = words,
	_morewords = words,
	_evenmorewords = words,
}, Class)

foo(
	{
		foo = bar,
	},
	baz,
	{
		bar = baz,
	}
)

Roact.createElement("Frame", {
	foo = bar,
	bar = baz,
}, self.props[Roact.Children])

