tests/snapshots/tests__standard@function-call-5.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
function GamepadModule.gamepadLinearToCurve(thumbstickPosition)
	return Vector2.new(
		math.clamp(
			math.sign(thumbstickPosition.X)
				* fromSCurveSpace(SCurveTransform(toSCurveSpace(math.abs(thumbstickPosition.X)))),
			-1,
			1
		),
		math.clamp(
			math.sign(thumbstickPosition.Y)
				* fromSCurveSpace(SCurveTransform(toSCurveSpace(math.abs(thumbstickPosition.Y)))),
			-1,
			1
		)
	)
end

