tests/snapshots/tests__standard@function-call-8.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
function_call(
	(
		"hello"
		.. "darkness"
		.. "my"
		.. "old"
		.. "friend"
		.. "hello"
		.. "darkness"
		.. "my"
		.. "old"
		.. "friend"
		.. "!!!!!!!!!!!!"
	):call()
)

